将串口数据保存文件